medications/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medications-frontend
spec:
  selector:
    matchLabels:
      app: medications
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: medications
        tier: frontend
        track: stable
    spec:
      containers:
      - name: medications-frontend
        image: "titoballon/medications-frontend"
