medications/medications-provider.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medications
spec:
  selector:
    matchLabels:
      app: medications
      tier: mock-provider
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: medications
        tier: mock-provider
        track: stable
    spec:
      containers:
        - name: medications-provider
          image: "titoballon/medications-provider"
          ports:
            - name: http
              containerPort: 8001
