medications/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: medications-frontend
spec:
  selector:
    app: medications
    tier: medications-frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
