medications/medications-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: medications-backend
spec:
  selector:
    app: medications
    tier: backend
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
