medications/medications-provider-service.yml
apiVersion: v1
kind: Service
metadata:
  name: medications-provider
spec:
  selector:
    app: medications
    tier: mock-provider
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
