medications/medications-backend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /medications
          backend:
            serviceName: medications-backend
            servicePort: 8000
        - path: /
          backend:
            serviceName: medications-frontend
            servicePort: 80
